<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/header_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/main_title_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/main_title_text_color" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/main_content_background"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/sign_up_input_username_label"
                android:textColor="@color/main_title_text_color" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:gravity="center"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/sign_up_input_username_hint"
                android:textColorHint="@color/main_input_hint_text_color"
                android:textColor="@color/main_title_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/sign_up_input_password_label"
                android:textColor="@color/main_title_text_color" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:gravity="center"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:inputType="textPassword"
                android:hint="@string/sign_up_input_password_hint"
                android:textColorHint="@color/main_input_hint_text_color"
                android:textColor="@color/main_title_text_color" />

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/main_invalid_text_color"
                android:text="@string/login_input_invalid"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/main_submit_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/main_submit_button_text_color"
                android:text="@string/login_label"
                android:onClick="onClickButtonLogin" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
